objects/Account_Plan_Associations__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>R1_R-0579_Copy Name from the Account</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_ID__c</fullName>
        <description>R1_R-0579_copy values from the Account Plan</description>
        <formula>HYPERLINK(&quot;https://arkema.lightning.force.com/lightning/r/AP_Account_Plan__c/&quot; &amp; Account_Plan__r.Id &amp; &quot;/view&quot;,Account_Plan__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <description>R1_R-0579_copy Account plan Status from the Account Plan</description>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Summary__c</fullName>
        <description>R-0579</description>
        <label>Account Plan Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Title__c</fullName>
        <description>R1_R-0579_copy Account Plan Title from the Account Plan</description>
        <formula>Account_Plan__r.Account_Plan_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R1_R-0026_Master Detail Relationship to Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>AP_Account_Plan__c</referenceTo>
        <relationshipName>Account_Plan_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>R1_R-0579_copy record type name from account</description>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>R1-R-0026-This field identifies the master detail object account on account plan association.</description>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Please select a non-retailer Account</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Retailer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Plan_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <description>R1_R-0579_capture Accounts billing city</description>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>R1_R-0579_capture Accounts billing country</description>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_status__c</fullName>
        <label>Business Relationship status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buying</fullName>
                </value>
                <value>
                    <fullName>Planning to buy</fullName>
                </value>
                <value>
                    <fullName>Already bought</fullName>
                </value>
                <value>
                    <fullName>Not buying</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_PreventAPACreation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_PreventAPACreation</label>
        <type>Checkbox</type>
    </fields>
    <label>AP Related Account</label>
    <nameField>
        <displayFormat>APA-{000000}</displayFormat>
        <label>AP Associations ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR01_PreventAPCreation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.Skip_Validation__c == False,
Tech_PreventAPACreation__c = true)</errorConditionFormula>
        <errorMessage>There is already an existing Active account plan related to the Account.</errorMessage>
    </validationRules>
</CustomObject>